# enron_nosql_project

./: .gitignore  README.md  pyproject.toml
docs/: Architecture_EN.docx  Architecture_FR.docx
src/cassandra/: export_cassandra.py
src/common/: io_utils.py  prepare_enron.py  referentiels.py  run_all_exports.py
src/elasticsearch/: export_elasticsearch.py
src/mongo/: export_mongo.py
src/neo4j/: export_neo4j.py
src/redis/: export_redis_data.py  load_redis.py
